--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,8 +1,18 @@
 <% books.each do |book| %>
 <tbody>
   <tr>
-    <td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %></td>
-    <td><%= book.title %></td>
+    <td>
+      <%= link_to user_path(book.user.id), target: "_blank" do %>
+        <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
+      <% end %>
+    </td>
+
+    <td>
+      <%= link_to book_path(book.id), target: "_blank" do %>
+        <%= book.title %>
+      <% end %>
+    </td>
+
     <td><%= book.body %></td>
   </tr>
 </tbody>
