--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,16 @@
+<% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2 class="error-title"><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+
+      <ul class="error-message">
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
 <p id="notice"></p>
 <div class="container px-5 px-sm-8">
   <div class="row">
@@ -49,8 +62,27 @@
           </tr>
         </thead>
 
-        <%= render 'books/list', books: @books %>
+        <% @books.each do |book| %>
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(book.user.id), target: "_blank" do %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
+              <% end %>
+            </td>
 
+            <td>
+              <%= link_to book_path(book.id), target: "_blank" do %>
+                <%=book.title %>
+              <% end %>
+            </td>
+
+            <td><%= book.body %></td>
+          </tr>
+        </tbody>
+
+        <% end %>
+        <%= paginate @books %>
 
       </table>
     </div>
