--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,7 +1,6 @@
+<p id="notice"></p>
 <div class="container">
   <div class="row">
-    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-      <h1>Welcome to <i class="fas fa-book"></i>Bookers!!</h1>
-    </div>
+    <h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i>Bookers!!</h1>
   </div>
 </div>
