--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,16 +45,16 @@
               <% else %>
 
               <li class="nav-item">
-                <%= link_to "Home", root_path, class: 'nav-link text-light' %>
+                <%= link_to " Home", root_path, class: 'fas fa-home  nav-link text-light' %>
               </li>
               <li class="nav-item">
-                <%= link_to "About", "/home/about", class: 'nav-link text-light' %>
+                <%= link_to " About", "/home/about", class: 'fas fa-link nav-link text-light' %>
               </li>
               <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+                <%= link_to " sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-light' %>
               </li>
               <li class="nav-item">
-                <%= link_to "login", new_user_session_path, class: 'nav-link text-light' %>
+                <%= link_to " login", new_user_session_path, class: 'fas fa-sign-in-alt nav-link text-light' %>
               </li>
               <% end %>
             </ul>
@@ -63,6 +63,7 @@
       </nav>
     </header>
     <main>
+      <%= render 'layouts/notification' %>
     <%= yield %>
     </main>
     <footer>
