--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
       </nav>
     </header>
     <main>
-      <%= render 'layouts/notification' %>
+      <%= render 'layouts/flash_message' %>
     <%= yield %>
     </main>
     <footer>
