--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,36 +1,46 @@
-<p id="notice"></p>
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h2>User info</h2>
+<% if @user == current_user %>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h2>User info</h2>
 
-      <%= form_with model: @user, local:true do |f| %>
+        <%= form_with model:@user, local:true do |f| %>
 
-        <div class="form-group">
-          <label for="user_name">Name</label>
-          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前",:class => 'form-control name' %>
-        </div>
+          <div class="form-group">
+            <label for="user_name">Name</label>
+            <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class: "form-control name" %>
+          </div>
 
-        <div class="form-group">
-          <label for="user_image">Image</label>
-          <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
-          <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-        </div>
+          <div class="form-group">
+            <label for="user_image">Image</label>
+            <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "form-control-file user_image" %>
+          </div>
 
-        <div class="form-group">
-          <label for="user_introduction">Introduction</label>
-          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前",:class => 'form-control introduction' %>
-        </div>
+          <div class="form-group">
+            <label for="user_introduction">Introduction</label>
+            <%= f.text_field :introduction, autofocus: true, id:"inputName", placeholder:"Introduction", class: "form-control introduction" %>
+          </div>
 
-        <div class="form-group">
-          <%= f.submit "Update User", class: "btn btn-success" %>
-        </div>
+          <div class="form-group">
+            <%= f.submit "Update User", class: "btn btn-success" %>
+          </div>
 
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
+<% end %>
 
-
+<% if @user != current_user %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <p></p>
+      <h2>アクセス権限がありません。</h2>
+      </div>
+    </div>
+  </div>
+<% end %>
 
 
