--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -66,13 +66,13 @@
         <tbody>
           <tr>
             <td>
-              <%= link_to user_path(book.user.id), target: "_blank" do %>
+              <%= link_to user_path(book.user.id) do %>
                 <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
               <% end %>
             </td>
 
             <td>
-              <%= link_to book_path(book.id), target: "_blank" do %>
+              <%= link_to book_path(book) do %>
                 <%=book.title %>
               <% end %>
             </td>
