--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,40 +15,7 @@
 <div class="container px-5 px-sm-8">
   <div class="row">
 
-    <div class="col-md-3">
-
-      <h2>User info</h2>
-      <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th>name</th>
-            <th><%= current_user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= current_user.introduction %></th>
-          </tr>
-        </tbody>
-      </table>
-
-      <div class="row">
-        <%= link_to '', edit_user_path(current_user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
-      </div>
-
-      <h2 class="mt-3">New Book</h2>
-
-      <%= form_with model: @book, local:true do |f| %>
-
-        <h4>Title</h4>
-        <%= f.text_field :title %>
-        <h4>Opinion</h4>
-        <%= f.text_field :body %>
-        <div class="form-group">
-          <%= f.submit 'Create Book' %>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'users/sideBar', users: @users %>
 
     <div class="col-md-8 offset-md-1">
     <h2>Books</h2>
