--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
       </table>
 
       <div class="row">
-        <%= link_to '', edit_user_path(current_user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
+        <%= link_to '', edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
       </div>
 
       <h2 class="mt-3">New Book</h2>
@@ -54,12 +54,12 @@
         <tbody>
           <tr>
             <td>
-              <%= link_to user_path(current_user.id), target: "_blank" do %>
+              <%= link_to user_path(current_user.id) do %>
                 <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
               <% end %>
             </td>
             <td>
-              <%= link_to book_path(book.id), target: "_blank" do %>
+              <%= link_to book_path(book.id) do %>
                 <%= book.title %>
               <% end %>
             </td>
