--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,20 @@
 .field {
   margin-bottom: 10px;
 }
+
+.field_with_errors {
+input {
+@extend .is-invalid;
+}
+}
+.form-group {
+.field_with_errors {
+label {
+font-size: 20px;
+font-weight: 500;
+}
+input {
+height: 50px;
+}
+}
+}
