--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,10 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 <p id="notice"></p>
 <div class="container">
   <div class="row">
@@ -20,7 +27,7 @@
           </div>
 
 
-          <%= link_to "show", @book %>
+          <%= link_to "Show", @book %>
           |
           <a href="/books">Back</a>
         <% end %>
