--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,9 @@
 <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2 class="error-title"><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
-
-      <ul class="error-message">
-        <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
   <% end %>
+<% end %>
 
 
 <p id="notice"></p>
