--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,7 +23,7 @@
         <%= link_to '', edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
       </div>
 
-      <h2 class="mt-3">New Book</h2>
+      <h2 class="mt-3">New book</h2>
 
       <%= form_with model: @book, local:true do |f| %>
 
@@ -45,7 +45,7 @@
         <tbody class="books-tbody">
           <tr>
             <td>
-              <%= link_to user_path(current_user.id) do %>
+              <%= link_to user_path(@user.id) do %>
                 <%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %></br>
                 <%= @book.user.name %>
               <% end %>
@@ -58,7 +58,7 @@
             <td><%= @book.body %></td>
 
             <% if @book.user == current_user %>
-              <td><%= link_to "edit", edit_book_path(@book), class: 'btn btn-sm btn-success' %></td>
+              <td><%= link_to "Edit", edit_book_path(@book), method: :edit, class: 'btn btn-sm btn-success' %></td>
               <td><%= link_to "Destroy", book_path(@book), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: '削除しますか？' } %></td>
             <% end %>
 
