--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
         <%= link_to '', edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
       </div>
 
-      <h2 class="mt-3">New Book</h2>
+      <h2 class="mt-3">New book</h2>
 
       <%= form_with model: @book, local:true do |f| %>
 
@@ -54,7 +54,7 @@
         <tbody>
           <tr>
             <td>
-              <%= link_to user_path(current_user.id) do %>
+              <%= link_to user_path(@user.id) do %>
                 <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
               <% end %>
             </td>
