--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,32 @@
   margin-bottom: 10px;
 }
 
+.profile_image {
+  padding-bottom: 3px;
+}
+
+.new_book_title {
+  margin-top: 25px;
+}
+
+#book_title, #book_body {
+  margin-bottom: 10px;
+}
+
+.book_title {
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.book_body {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.opinion_field {
+
+}
+
 .field_with_errors {
 input {
 @extend .is-invalid;
