--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>件のerrorが発生しました
   <% @book.errors.full_messages.each do |message| %>
     <%= message %>
   <% end %>
@@ -29,7 +29,7 @@
           <tr>
             <td>
               <%= link_to user_path(book.user.id) do %>
-                <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:'40x40' %>
               <% end %>
             </td>
 
@@ -44,7 +44,6 @@
         </tbody>
 
         <% end %>
-        <%= paginate @books %>
 
       </table>
     </div>
