--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,16 +23,16 @@
         <%= link_to '', edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
       </div>
 
-      <h2 class="mt-3">New book</h2>
+      <h2 class="mt-3 new_book_title">New book</h2>
 
-      <%= form_with model: @book, local:true do |f| %>
+      <%= form_with model: @book_new, local:true do |f| %>
 
-        <h4>Title</h4>
-        <%= f.text_field :title %>
-        <h4>Opinion</h4>
-        <%= f.text_field :body %>
-        <div class="books-create-btn">
-        <%= f.submit 'Create Book' %>
+        <h4 class="book_title">Title</h4>
+        <%= f.text_area :title, size: "20x1" %>
+        <h4 class="book_body">Opinion</h4>
+        <%= f.text_area :body, size: "20x3" %>
+        <div class="form-group">
+          <%= f.submit 'Create Book', class: 'btn btn-sm btn-success opinion_field' %>
         </div>
       <% end %>
 
@@ -46,7 +46,7 @@
           <tr>
             <td>
               <%= link_to user_path(@user.id) do %>
-                <%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %></br>
+                <%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:'40x40' %></br>
                 <%= @book.user.name %>
               <% end %>
             </td>
@@ -58,7 +58,7 @@
             <td><%= @book.body %></td>
 
             <% if @book.user == current_user %>
-              <td><%= link_to "Edit", edit_book_path(@book), method: :edit, class: 'btn btn-sm btn-success' %></td>
+              <td><%= link_to "Edit", edit_book_path(@book), class: 'btn btn-sm btn-success' %></td>
               <td><%= link_to "Destroy", book_path(@book), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: '削除しますか？' } %></td>
             <% end %>
 
