--- a/app/views/users/_sideBar.html.erb
+++ b/app/views/users/_sideBar.html.erb
@@ -18,16 +18,16 @@
     <%= link_to '', edit_user_path(current_user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
   </div>
 
-  <h2 class="mt-3">New book</h2>
+  <h2 class="mt-3 new_book_title">New book</h2>
 
   <%= form_with model: @book, local:true do |f| %>
 
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-    <h4>Opinion</h4>
-    <%= f.text_field :body %>
+    <h4 class="book_title">Title</h4>
+    <%= f.text_area :title, size: "20x1" %>
+    <h4 class="book_body">Opinion</h4>
+    <%= f.text_area :body, size: "20x3" %>
     <div class="form-group">
-      <%= f.submit 'Create Book' %>
+      <%= f.submit 'Create Book', class: 'btn btn-sm btn-success opinion_field' %>
     </div>
   <% end %>
 </div>
